<resources>
    <string name="app_name">retoSohphos</string>
    <string name="txt_Password">Contraseña</string>
    <string name="txt_Email">Correo electrónico</string>
    <string name="btn_Ingresar">Ingresar</string>
    <string name="btn_huella">Ingresar con huella</string>

    <string name="txt_Nombre">Nombre</string>
    <string name="btn_Salir">Cerrar sesion</string>
    <string name="txt_enviar">Enviar Documentos</string>
    <string name="btn_enviar">Ingresar</string>
    <string name="txt_ver">Ver Documentos</string>
    <string name="btn_ver">Ingresar</string>
    <string name="txt_oficinas">Oficinas</string>
    <string name="btn_oficinas">Ingresar</string>

    <string name="bt_atras">atras</string>

    <string name="etxt_Numerodoc">Numero de Documento</string>
    <string name="etxt_Nombre">Nombres</string>
    <string name="etxt_Apellido">Apellidos</string>
    <string name="etxt_Email">Email</string>
    <string name="txt_doc">Selecciona el tipo de documento: </string>
    <string name="rbtn_cc">CC</string>
    <string name="rbtn_ti">TI</string>
    <string name="rbtn_ce">CE</string>
    <string name="rbtn_pa">PA</string>
    <string name="txt_Ciudad">Selecciona la ciudad en que te encuentras: </string>
    <string name="rbtn_chile">Chile</string>
    <string name="rbtn_usa">Estados Unidos</string>
    <string name="rbtn_bta">Bogotá</string>
    <string name="rbtn_md">Medellín</string>
    <string name="rbtn_pan">Panamá</string>
    <string name="rbtn_mx">México</string>
    <string name="txt_tipoAdjunto">Selecciona el tipo de adjunto:</string>

    <string name="rbtn_cert">Certificado de cuenta</string>
    <string name="rbtn_ced">Cédula</string>
    <string name="rbtn_fac">Factura</string>
    <string name="rbtn_inc">Incapacidad</string>


    <string name="btn_enviarDoc">Enviar</string>
    <string name="btn_Adjunto">Adjuntar</string>


</resources>