<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FormularioDocumento">
    <include
        layout="@layout/action_bar_toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="38dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">
            <!--

    <ImageView
        android:id="@+id/btn_atras"
        android:layout_width="55dp"
        android:layout_height="35dp"
        android:layout_gravity="start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/atras" />

    <TextView
        android:id="@+id/txt_Titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_Titulo"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="48dp"
        tools:ignore="MissingConstraints" />-->


    <ImageView
        android:id="@+id/btn_camara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Titulo"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/cam" />

            <TextView
                android:id="@+id/txt_doc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_doc"
                android:layout_marginTop="20dp"
                android:textColor="#414247"
                android:textSize="15dp"
                tools:layout_editor_absoluteY="48dp"
                tools:ignore="MissingConstraints" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <RadioGroup
                android:id="@+id/rg_documentos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbtn_cc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rbtn_cc" />

                <RadioButton
                    android:id="@+id/rbtn_ti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rbtn_ti" />

                <RadioButton
                    android:id="@+id/rbtn_ce"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rbtn_ce" />

                <RadioButton
                    android:id="@+id/rbtn_pa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rbtn_pa" />
            </RadioGroup>
        </LinearLayout>

            <EditText
                android:id="@+id/etxt_Numerodoc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/etxt_Numerodoc"
                android:inputType="number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spn_Tipodedoc" />

            <EditText
                android:id="@+id/etxt_Nombre"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/etxt_Nombre"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etxt_Numerodoc" />

            <EditText
                android:id="@+id/etxt_Apellido"
                android:layout_width="277dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/etxt_Apellido"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etxt_Nombre" />

            <EditText
                android:id="@+id/etxt_Email"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/etxt_Email"
                android:ems="10"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etxt_Apellido" />

            <TextView
                android:id="@+id/txt_Ciudad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_Ciudad"
                android:layout_marginTop="20dp"
                android:textColor="#414247"
                android:textSize="15dp"
                tools:layout_editor_absoluteY="48dp"
                tools:ignore="MissingConstraints" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/rg_ciudad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rbtn_chile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rbtn_chile" />

                    <RadioButton
                        android:id="@+id/rbtn_usa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rbtn_usa" />

                    <RadioButton
                        android:id="@+id/rbtn_bta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rbtn_bta" />

                    <RadioButton
                        android:id="@+id/rbtn_md"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rbtn_md" />

                    <RadioButton
                        android:id="@+id/rbtn_pan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rbtn_pan" />
                    <RadioButton
                        android:id="@+id/rbtn_mx"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rbtn_mx" />
                </RadioGroup>
            </LinearLayout>
            <TextView
                android:id="@+id/txt_tipoAdjunto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_tipoAdjunto"
                android:layout_marginTop="20dp"
                android:textColor="#414247"
                android:textSize="15dp"
                tools:layout_editor_absoluteY="48dp"
                tools:ignore="MissingConstraints" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioGroup
                    android:id="@+id/rg_tipoAdjunto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rbtn_cert"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rbtn_cert" />

                    <RadioButton
                        android:id="@+id/rbtn_ced"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rbtn_ced" />

                    <RadioButton
                        android:id="@+id/rbtn_fac"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rbtn_fac" />

                    <RadioButton
                        android:id="@+id/rbtn_inc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rbtn_inc" />
                </RadioGroup>
            </LinearLayout>

            <Button
                android:id="@+id/btn_Adjunto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="24dp"
                android:background="@color/purple_500"
                android:text="@string/btn_Adjunto"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toTopOf="@+id/btn_enviarDoc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spn_TipoDeAdjunto"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/btn_enviarDoc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/redondear"
                android:text="@string/btn_enviarDoc"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/img_Foto"
                android:layout_width="326dp"
                android:layout_height="170dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"

                />

        </LinearLayout>
</ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>